--- a/params.config
+++ b/params.config
@@ -1,37 +1,31 @@
 params {
-    kit                 = "SQK-RNA001"
+    kit                 = "SQK-RNA002"
     flowcell            = "FLO-MIN106"
-    fast5               = "$baseDir/data/**/*.fast5"
-    reference           = "$baseDir/anno/curlcake_constructs.fasta.gz"
+    fast5               = "$baseDir/data2/**/*.fast5"
+    reference           = "$baseDir/anno/curlcake_constructs_EcoRV_BamHI_digestion.fasta.gz"
     annotation          = ""
     ref_type            = "transcriptome"
 
     seq_type            = "cDNA"
     output              = "$baseDir/output2"
     qualityqc           = 5
-    granularity         = 2 
+    granularity         = 1  
 
-    basecaller          = "albacore"
-    basecaller_opt      = ""
-    GPU                 = "OFF"
-    demultiplexing      = ""   
-    demultiplexing_opt  = "-m pAmps-final-actrun_newdata_nanopore_UResNet20v2_model.030.h5"
-    demulti_fast5       = "OFF"    
+    basecalling         = "guppy"
+    GPU                 = "ON"
+    demultiplexing      = "NO"
+//guppy"
+    demulti_fast5       = "ON" 
 
-    filter              = ""
-    filter_opt          = ""
+    filtering              = "nanofilt"
    
-    mapper              = "graphmap"
-    mapper_opt          = ""
-    map_type            = "unspliced"
+    mapping              = "minimap2"
 
-    counter             = "YES"
-    counter_opt         = ""
+    counting             = "htseq"
 
-    variant_caller      = "YES"
-    variant_opt         = ""
+    variantcall         = "medaka"
 
-    downsampling        = ""
+    downsampling        = "NO"
 
     email               = ""
 }
