--- a/nextflow.global.config
+++ b/nextflow.global.config
@@ -21,10 +21,9 @@ profiles {
 				cpus = 8
 				memory = '20G'
 		  }
-		  withLabel: demulti {
-				container = 'lpryszcz/deeplexicon:1.2.0'
-				cpus = 8
-				memory = '20G'
+		  withLabel: demulti_cpus {
+				cpus = 1
+				memory = '12G'
 		  }
 		  withLabel: basecall_cpus {
 				container = 'biocorecrg/mopbasecall:0.2'
@@ -60,8 +59,7 @@ profiles {
 		    withLabel: big_mem_cpus {
 				cpus = 1
 		    }
-		    withLabel: demulti {
-				container = 'lpryszcz/deeplexicon:1.2.0'
+		    withLabel: demulti_cpus {
 				cpus = 1
 		    }
 		    withLabel: basecall_cpus {
@@ -98,11 +96,14 @@ profiles {
 				cpus = 8
 				memory = '20G'
 		  }
-		  withLabel: demulti {
-				container = 'lpryszcz/deeplexicon:1.2.0'
-				cpus = 8
-				memory = '20G'
+		  withLabel: demulti_cpus {
+				cpus = 1
+				memory = '12G'
 		  }
+                  withLabel: more_cpus {
+		  	        cpus = 8
+                                memory = '8G'
+                  }
 		  withLabel: basecall_cpus {
 				container = 'biocorecrg/mopbasecall:0.2'
 				cpus = 8
