--- a/nextflow.global.config
+++ b/nextflow.global.config
@@ -114,7 +114,16 @@ profiles {
 			   cpus = 8
 			   memory = '30G'
 			   time = '6h'
-		  } 		
+		  } 	
+                  withLabel: demulti_gpus {
+                        queue = 'gpu'
+                  //      container = 'lpryszcz/deeplexicon:1.2.0-gpu'
+                        memory = '20G'
+                        clusterOptions = {" -l gpu=1 -l virtual_free=${task.memory.toString().replaceAll(/[\sB]/,'')}"}
+                        singularity.envWhitelist = "CUDA_VISIBLE_DEVICES,SGE_HGR_gpu"
+                        containerOptions = { workflow.containerEngine == "singularity" ? '--nv':
+                        ( workflow.containerEngine == "docker" ? '-u $(id -u):$(id -g) --gpus all': null ) }
+                  }	
 		  withLabel: basecall_gpus {
         		queue = 'gpu'
         		container = 'biocorecrg/mopbasecall:0.2'
