--- a/params.config
+++ b/params.config
@@ -3,8 +3,8 @@ params {
     flowcell            = "FLO-MIN106"
     fast5               = "$baseDir/data2/**/*.fast5"
     reference           = "$baseDir/anno/curlcake_constructs_EcoRV_BamHI_digestion.fasta.gz"
-    annotation          = ""
-    ref_type            = "transcriptome"
+    annotation          = "$baseDir/anno/curlcake_constructs_EcoRV_BamHI_digestion.gtf.gz"
+    ref_type            = "genome"
 
     seq_type            = "cDNA"
     output              = "$baseDir/output2"
@@ -13,13 +13,14 @@ params {
 
     basecalling         = "guppy"
     GPU                 = "ON"
-    demultiplexing      = "NO"
+    demultiplexing      = "guppy"
+//deeplexicon"
 //guppy"
     demulti_fast5       = "ON" 
 
     filtering              = "nanofilt"
    
-    mapping              = "minimap2"
+    mapping              = "graphmap2"
 
     counting             = "htseq"
 
