adding save space

--- a/params.config
+++ b/params.config
@@ -9,13 +9,11 @@ params {
     seq_type            = "cDNA"
     output              = "$baseDir/output2"
     qualityqc           = 5
-    granularity         = 1  
+    granularity         = 2  
 
     basecalling         = "guppy"
     GPU                 = "ON"
-    demultiplexing      = "guppy"
-//deeplexicon"
-//guppy"
+    demultiplexing      = "deeplexicon"
     demulti_fast5       = "ON" 
 
     filtering              = "nanofilt"
@@ -24,9 +22,7 @@ params {
 
     counting             = "htseq"
 
-    variantcall         = "medaka"
-
-    downsampling        = "NO"
+    saveSpace           = "YES"
 
     email               = ""
 }
