--- a/params.config
+++ b/params.config
@@ -22,7 +22,7 @@ params {
 
     counting             = "htseq"
 
-    saveSpace           = "YES"
+    saveSpace           = "NO"
 
     email               = ""
 }
