fixing output fast5

--- a/params.config
+++ b/params.config
@@ -7,14 +7,15 @@ params {
     ref_type            = "genome"
 
     seq_type            = "cDNA"
-    output              = "$baseDir/output2"
+    output              = "$baseDir/output"
     qualityqc           = 5
     granularity         = 2  
 
     basecalling         = "guppy"
     GPU                 = "ON"
-    demultiplexing      = "deeplexicon"
-    demulti_fast5       = "ON" 
+    demultiplexing      = "NO"
+//deeplexicon"
+    demulti_fast5       = "NO" 
 
     filtering              = "nanofilt"
    
