adding demultiplexing to guppy

--- a/params.config
+++ b/params.config
@@ -6,16 +6,16 @@ params {
     annotation          = "$baseDir/anno/curlcake_constructs_EcoRV_BamHI_digestion.gtf.gz"
     ref_type            = "genome"
 
-    seq_type            = "cDNA"
+    pars_tools          = "drna_tool_opt.tsv" 
     output              = "$baseDir/output"
     qualityqc           = 5
     granularity         = 2  
 
     basecalling         = "guppy"
     GPU                 = "ON"
-    demultiplexing      = "NO"
+    demultiplexing      = "guppy"
 //deeplexicon"
-    demulti_fast5       = "NO" 
+    demulti_fast5       = "ON" 
 
     filtering              = "nanofilt"
    
