making first module

--- a/mop_preprocess/params.config
+++ b/mop_preprocess/params.config
@@ -1,9 +1,9 @@
 params {
     kit                 = "SQK-RNA002"
     flowcell            = "FLO-MIN106"
-    fast5               = "$baseDir/data2/**/*.fast5"
-    reference           = "$baseDir/anno/curlcake_constructs_EcoRV_BamHI_digestion.fasta.gz"
-    annotation          = "$baseDir/anno/curlcake_constructs_EcoRV_BamHI_digestion.gtf.gz"
+    fast5               = "$baseDir/../data2/**/*.fast5"
+    reference           = "$baseDir/../anno/curlcake_constructs_EcoRV_BamHI_digestion.fasta.gz"
+    annotation          = "$baseDir/../anno/curlcake_constructs_EcoRV_BamHI_digestion.gtf.gz"
     ref_type            = "genome"
 
     pars_tools          = "drna_tool_opt.tsv" 
