--- a/mop_preprocess/params.config
+++ b/mop_preprocess/params.config
@@ -1,7 +1,10 @@
 params {
     kit                 = "SQK-RNA002"
     flowcell            = "FLO-MIN106"
-    fast5               = "$baseDir/../data2/**/*.fast5"
+    fast5               = ""
+    fastq               = "$baseDir/../data3/*.fq.gz"
+
+//$baseDir/../data2/**/*.fast5"
     reference           = "$baseDir/../anno/curlcake_constructs_EcoRV_BamHI_digestion.fasta.gz"
     annotation          = "$baseDir/../anno/curlcake_constructs_EcoRV_BamHI_digestion.gtf.gz"
     ref_type            = "genome"
