--- a/mop_mod/params.config
+++ b/mop_mod/params.config
@@ -8,9 +8,10 @@ params {
     coverage           = 5
 
     pars_tools         = "$baseDir/tools_opt.tsv"
+    
     // flows 
-    epinano       = "YES"
-    nanocompore   = "YES"
+    epinano       = "NO"
+    nanocompore   = "NO"
     tombo_lsc     = "YES"
     tombo_msc     = "YES"
 
