--- a/mop_mod/params.config
+++ b/mop_mod/params.config
@@ -10,8 +10,8 @@ params {
     pars_tools         = "$baseDir/tools_opt.tsv"
     
     // flows 
-    epinano       = "NO"
-    nanocompore   = "NO"
+    epinano       = "YES"
+    nanocompore   = "YES"
     tombo_lsc     = "YES"
     tombo_msc     = "YES"
 
