adding new files

--- a/nextflow.global.config
+++ b/nextflow.global.config
@@ -17,6 +17,11 @@ profiles {
 				cpus = 8
 				memory = '8G'
 		  }
+                  withLabel: big_cpus_ignore {
+                                errorStrategy = 'ignore'
+                                cpus = 8
+                                memory = '8G'
+                  } 
 		  withLabel: big_mem_cpus {
 				time = '6h'
 				cpus = 8
@@ -63,6 +68,13 @@ profiles {
 				cpus = 8
 				memory = '8G'
 		  }
+                  withLabel: big_cpus_ignore {
+                                errorStrategy = 'ignore'
+                                cpus = 8
+                                memory = '8G'
+                  }
+
+
 		  withLabel: big_mem_cpus {
 				time = '6h'
 				cpus = 8
