--- a/mop_preprocess/params.config
+++ b/mop_preprocess/params.config
@@ -1,32 +1,32 @@
 params {
     kit                 = "SQK-RNA002"
     flowcell            = "FLO-MIN106"
-    fast5               = ""
-    fastq               = "$baseDir/../data3/*.fq.gz"
+    fast5               = "$baseDir/../data4/**/*.fast5"
+    fastq               = ""
 
-//$baseDir/../data2/**/*.fast5"
-    reference           = "$baseDir/../anno/curlcake_constructs_EcoRV_BamHI_digestion.fasta.gz"
-    annotation          = "$baseDir/../anno/curlcake_constructs_EcoRV_BamHI_digestion.gtf.gz"
-    ref_type            = "genome"
+    reference           = "$baseDir/../anno/yeast_rRNA_ref.fa.gz"
+    annotation          = ""
+    ref_type            = "transcriptome"
 
-    pars_tools          = "drna_tool_opt.tsv" 
+    pars_tools          = "drna_tool_splice_opt.tsv" 
     output              = "$baseDir/output"
     qualityqc           = 5
-    granularity         = 2  
+    granularity         = 1
 
     basecalling         = "guppy"
-    GPU                 = "ON"
-    demultiplexing      = "guppy"
-//deeplexicon"
-    demulti_fast5       = "ON" 
+    GPU                 = "OFF"
+    demultiplexing      = "NO"
+    demulti_fast5       = "NO" 
 
-    filtering              = "nanofilt"
-   
-    mapping              = "graphmap2"
+    filtering              = "NO"
 
-    counting             = "htseq"
+    mapping              = "graphmap"
+    counting             = "nanocount"
 
-    saveSpace           = "NO"
+    cram_conv            = "YES"
+    subsampling_cram     = 50
 
-    email               = ""
+    saveSpace            = "NO"
+
+    email                = ""
 }
