replacing params.config

--- a/mop_preprocess/params.config
+++ b/mop_preprocess/params.config
@@ -1,10 +1,10 @@
 params {
     kit                 = "SQK-RNA002"
     flowcell            = "FLO-MIN106"
-    fast5               = "$baseDir/../data4/**/*.fast5"
+    fast5               = "$baseDir/../data/**/*.fast5"
     fastq               = ""
 
-    reference           = "$baseDir/../anno/yeast_rRNA_ref.fa.gz"
+    reference           = "$baseDir/../anno/curlcake_constructs.fasta.gz"
     annotation          = ""
     ref_type            = "transcriptome"
 
