--- a/mop_preprocess/params.config
+++ b/mop_preprocess/params.config
@@ -18,15 +18,16 @@ params {
     demultiplexing      = "NO"
     demulti_fast5       = "NO" 
 
-    filtering              = "NO"
+    filtering           = "NO"
 
-    mapping              = "graphmap"
-    counting             = "nanocount"
+    mapping             = "graphmap"
+    counting            = "nanocount"
+    discovery           = "bambu"
 
-    cram_conv            = "YES"
-    subsampling_cram     = 50
+    cram_conv           = "YES"
+    subsampling_cram    = 50
 
-    saveSpace            = "NO"
+    saveSpace           = "NO"
 
-    email                = ""
+    email               = ""
 }
