--- a/mop_preprocess/params.config
+++ b/mop_preprocess/params.config
@@ -22,7 +22,7 @@ params {
 
     mapping             = "graphmap"
     counting            = "nanocount"
-    discovery           = "bambu"
+    discovery           = "NO"
 
     cram_conv           = "YES"
     subsampling_cram    = 50
