improving nextflow.config

--- a/nextflow.global.config
+++ b/nextflow.global.config
@@ -40,63 +40,9 @@ profiles {
 		}    
     }   
     local {
-        process {
-    		executor = 'local'
-    		cpus = 1
-    		memory = '7GB'    
-  		    cache='lenient'
-		    container = 'biocorecrg/mopprepr:0.7'
-		    containerOptions = { workflow.containerEngine == "docker" ? '-u $(id -u):$(id -g)': null}
-		    withLabel: basecall_gpus {
-				maxForks = 1
-			    containerOptions = { workflow.containerEngine == "singularity" ? '--nv':
-				   ( workflow.containerEngine == "docker" ? '-u $(id -u):$(id -g) --gpus all': null ) } 
-		    }
-		}
+		includeConfig 'conf/local.config'
     }
     cluster {
-		process {
-		  executor = 'sge'
-            penv = 'smp'
-            queue = 'long-sl7,biocore-el7,short-sl7' 
-		  cpus = 1
-		  memory='12G'
-		  cache='lenient'
-		  container = 'biocorecrg/mopprepr:0.7'
-		  containerOptions = { workflow.containerEngine == "docker" ? '-u $(id -u):$(id -g)': null}
-		  withLabel: big_cpus {
-				cpus = 8
-				memory = '8G'
-		  }
-                  withLabel: big_cpus_ignore {
-                                errorStrategy = 'ignore'
-                                cpus = 8
-                                memory = '8G'
-                  }
-
-
-		  withLabel: big_mem_cpus {
-				time = '6h'
-				cpus = 8
-				memory = '30G'
-		  }
-          withLabel: demulti_gpus {
-              queue = 'gpu'
-              memory = '20G'
-              clusterOptions = {" -l gpu=1 -l virtual_free=${task.memory.toString().replaceAll(/[\sB]/,'')}"}
-              singularity.envWhitelist = "CUDA_VISIBLE_DEVICES,SGE_HGR_gpu"
-              containerOptions = { workflow.containerEngine == "singularity" ? '--nv':
-              ( workflow.containerEngine == "docker" ? '-u $(id -u):$(id -g) --gpus all': null ) }
-          }	
-		  withLabel: basecall_gpus {
-        		queue = 'gpu'
-        		memory = '8G'
-        		clusterOptions = '-l gpu=1'
-                	singularity.enabled = true
-        		singularity.envWhitelist = "CUDA_VISIBLE_DEVICES,SGE_HGR_gpu"
-        		containerOptions = { workflow.containerEngine == "singularity" ? '--nv':
-           		( workflow.containerEngine == "docker" ? '-u $(id -u):$(id -g) --gpus all': null ) }
-		}	
-	 }
-   }
+		includeConfig 'conf/sge.config'
+	}
 }
