--- a/nextflow.global.config
+++ b/nextflow.global.config
@@ -11,7 +11,7 @@ profiles {
     local {
 		includeConfig 'conf/local.config'
     }
-    sge {
+    cluster {
 		includeConfig 'conf/sge.config'
 	}
 }
