--- a/docker/Dockerfile_htseq
+++ b/docker/Dockerfile_htseq
@@ -1,21 +1,25 @@
 # Install biocorecrg/htseq:30e9e9c
-FROM biocorecrg/centos-perlbrew-pyenv3-java:centos7
+FROM ubuntu:focal-20211006
 
 # File Author / Maintainer
 MAINTAINER Luca Cozzuto <lucacozzuto@gmail.com> 
 
 ARG HTSEQ_VERSION=30e9e9c
 
-
 #upgrade pip
-RUN pip install -U pip
+RUN apt-get update
+RUN apt-get install -y software-properties-common
+RUN apt-add-repository universe
+RUN apt install -y python3-pip
+RUN pip install --upgrade pip
 
 # Installing modules for EPINANO
 RUN pip install numpy pysam wheel 
 RUN pip install matplotlib 
 RUN pip install scipy 
 RUN pip install anndata loompy cython
-RUN git clone "https://github.com/htseq/htseq.git"; cd htseq; git checkout ${HTSEQ_VERSION}; python setup.py build; python setup.py install
+RUN apt install -y git
+RUN git clone "https://github.com/htseq/htseq.git"; cd htseq; git checkout ${HTSEQ_VERSION}; python3 setup.py build; python3 setup.py install
 
 
 
@@ -24,7 +28,6 @@ RUN git clone "https://github.com/htseq/htseq.git"; cd htseq; git checkout ${HTS
 
 #cleaning
 RUN rm -fr htseq 
-RUN rm -rf /var/cache/yum
 
 ENV LC_ALL=en_US.utf8
 ENV LANG=en_US.utf8
