--- a/conf/awsbatch.config
+++ b/conf/awsbatch.config
@@ -1,15 +1,15 @@
-workDir = 's3://mop-bucket/work'
+workDir = 's3://mop2-bucket-1/work'
 aws.region = 'eu-central-1'
 aws.batch.cliPath = '/home/ec2-user/miniconda/bin/aws'
-singularity.enabled = false
-docker.enabled = true
+
 
 process {
 	executor = 'awsbatch'
-  queue = 'mop'
+        queue = 'mop'
 	cpus = 1
 	memory='12G'
 	cache='lenient'
+
 	container = 'biocorecrg/mopprepr:0.7'
 	containerOptions = { workflow.containerEngine == "docker" ? '-u $(id -u):$(id -g)': null}
 
