--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -2,7 +2,7 @@ on: [push]
 
 jobs:
   build:
-    name: MoP2
+    name: MoP2-DOC
     runs-on: ubuntu-latest
     steps:
     - uses: seanzhengw/sphinx-pages@master
