--- a/conf/awsbatch.config
+++ b/conf/awsbatch.config
@@ -1,6 +1,7 @@
 workDir = 's3://mop2-bucket-1/work'
 aws.region = 'eu-central-1'
 aws.batch.cliPath = '/home/ec2-user/miniconda/bin/aws'
+params.EXTRAPARS_BC = ' --data_path /nextflow-bin/data'
 
 process {
 	executor = 'awsbatch'
@@ -30,13 +31,15 @@ process {
 	}
 
 	 withLabel: demulti_gpus {
-	     queue = 'gpu'
+	     accelerator = 1
+	     queue = 'mop-gpu'
 	     memory = '2G'
 	     // clusterOptions = {" -l gpu=1 -l virtual_free=${task.memory.toString().replaceAll(/[\sB]/,'')}"}
 			 containerOptions = { workflow.containerEngine == "singularity" ? '--nv':
 			 ( workflow.containerEngine == "docker" ? '-u $(id -u):$(id -g) --gpus all': null ) }	 }
 	  withLabel: basecall_gpus {
-   		queue = 'gpu'
+	  	accelerator = 1
+   		queue = 'mop-gpu'
    		memory = '2G'
    		clusterOptions = '-l gpu=1'
 			containerOptions = { workflow.containerEngine == "singularity" ? '--nv':
