--- a/conf/sge.config
+++ b/conf/sge.config
@@ -1,9 +1,10 @@
 process {
 	executor = 'sge'
-    penv = 'smp'
-    queue = 'long-sl7,biocore-el7,short-sl7' 
+        penv = 'smp'
+        queue = 'long-sl7,biocore-el7,short-sl7' 
 	cpus = 1
 	memory='12G'
+        clusterOptions = { "-l h_vmem=${task.memory.toString().replaceAll(/[\sB]/,'')}" }
 	cache='lenient'
 	container = 'biocorecrg/mopprepr:0.7'
 	containerOptions = { workflow.containerEngine == "docker" ? '-u $(id -u):$(id -g)': null}
@@ -11,6 +12,10 @@ process {
 		cpus = 8
 		memory = '8G'
 	}
+    withLabel: big_mem {
+        cpus = 1
+        memory = '80G'
+    }
     withLabel: big_cpus_ignore {
         errorStrategy = 'ignore'
         cpus = 8
