--- a/mop_tail/params.config
+++ b/mop_tail/params.config
@@ -1,13 +1,1 @@
-params {
-    
-    input_path         = "$baseDir/../mop_preprocess/output/"
-    reference          = "$baseDir/../anno/yeast_rRNA_ref.fa.gz"
-    pars_tools         = "$baseDir/tools_opt.tsv"
-
-    output             = "$baseDir/outputRNA"
-
-    tailfindr          = "YES"
-    nanopolish         = "YES"
- 
-    email              = "yourname@yourdomain"
-}
+params.config.promethion
