--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
           curl -fsSL get.nextflow.io | bash
           # Install Master Of Pores 2
           git clone --depth 1 --recurse-submodules https://github.com/biocorecrg/MOP2.git
-          cd MoP2
+          cd MOP2
           sh INSTALL.sh
           cd mop_preprocess 
           ../../nextflow run mop_preprocess.nf -with-docker -profile local
