adding local.config

--- a/conf/local.config
+++ b/conf/local.config
@@ -5,8 +5,12 @@ process {
     cache='lenient'
     container = 'biocorecrg/mopprepr:0.7'
     containerOptions = { workflow.containerEngine == "docker" ? '-u $(id -u):$(id -g)': null}
+    withLabel: big_cpus_ignore {
+        errorStrategy = 'ignore'
+	
+    }
     withLabel: basecall_gpus {
-		maxForks = 1
+	    maxForks = 1
 	    containerOptions = { workflow.containerEngine == "singularity" ? '--nv':
 		   ( workflow.containerEngine == "docker" ? '-u $(id -u):$(id -g) --gpus all': null ) } 
     }
