--- a/nextflow.global.config
+++ b/nextflow.global.config
@@ -20,4 +20,7 @@ profiles {
     standard {
       includeConfig 'conf/standard.config'
     }
+    ci {
+      includeConfig 'conf/ci.config'
+    }
 }
