--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,11 +37,11 @@ jobs:
           cd MOP2
           bash INSTALL.sh
           cd mop_preprocess 
-          ../../nextflow run mop_preprocess.nf -with-docker -profile local
+          ../../nextflow run mop_preprocess.nf -with-docker -profile ci
           cd ../mop_mod
-          ../../nextflow run mop_mod.nf -with-docker -profile local
+          ../../nextflow run mop_mod.nf -with-docker -profile ci
           cd ../mop_tail
-           ../../nextflow run mop_tail.nf -with-docker -profile local
+           ../../nextflow run mop_tail.nf -with-docker -profile ci
 
         env:
           NXF_ANSI_LOG: false
