--- a/conf/sge.config
+++ b/conf/sge.config
@@ -16,6 +16,13 @@ process {
         cpus = 1
         memory = '80G'
     }
+    withLabel: big_cpus_retry {
+        errorStrategy = 'retry'
+        cpus = 8
+        memory = {8.GB * task.attempt}
+        maxRetries = 3
+
+    }
     withLabel: big_cpus_ignore {
         errorStrategy = 'ignore'
         cpus = 8
