fixing time issue

--- a/conf/sge.config
+++ b/conf/sge.config
@@ -8,7 +8,18 @@ process {
 	cache='lenient'
 	container = 'biocorecrg/mopprepr:0.7'
 	containerOptions = { workflow.containerEngine == "docker" ? '-u $(id -u):$(id -g)': null}
-	withLabel: big_cpus {
+        withLabel: big_mem_time {
+             memory = '60G'
+             time = '24h' 
+        }
+        withLabel: big_time_cpus {
+                cpus = 8
+                memory = '60G'
+                time = '24h'
+                clusterOptions = { "-l h_vmem=${task.memory.toString().replaceAll(/[\sB]/,'')}" }
+
+        }	
+       withLabel: big_cpus {
 		cpus = 8
 		memory = '8G'
 	}
@@ -31,7 +42,7 @@ process {
 	withLabel: big_mem_cpus {
 		time = '6h'
 		cpus = 8
-		memory = '30G'
+		memory = '60G'
 	}
      withLabel: demulti_gpus {
          queue = 'gpu'
