--- a/nextflow.global.config
+++ b/nextflow.global.config
@@ -20,6 +20,9 @@ profiles {
     standard {
       includeConfig 'conf/standard.config'
     }
+    slurm {
+     includeConfig 'conf/slurm.config'
+    }
     ci {
       includeConfig 'conf/ci.config'
     }
