--- a/nextflow.global.config
+++ b/nextflow.global.config
@@ -1,6 +1,8 @@
 singularity.autoMounts = true
 
 env {
+  R_PROFILE_USER = "/.Rprofile"
+  R_ENVIRON_USER = "/.Renviron"
   PYTHONNOUSERSITE = 1
 }
 
