--- a/conf/sge.config
+++ b/conf/sge.config
@@ -31,6 +31,7 @@ process {
         errorStrategy = 'retry'
         cpus = 8
         memory = {8.GB * task.attempt}
+        time = {6.h * task.attempt}
         maxRetries = 3
 
     }
@@ -39,11 +40,17 @@ process {
         cpus = 8
         memory = '8G'
     }
-	withLabel: big_mem_cpus {
-		time = '6h'
+     withLabel: big_mem_cpus {
 		cpus = 8
 		memory = '60G'
-	}
+     }
+
+     withLabel: big_mem_cpus_ret {
+                cpus = 8
+                memory = '60G'
+                time = {6.h * task.attempt}
+     }
+
      withLabel: demulti_gpus {
          queue = 'gpu'
          memory = '20G'
