--- a/mop_consensus/params.config
+++ b/mop_consensus/params.config
@@ -1,6 +1,6 @@
 params {
     
-    input_path         = "$baseDir/../mop_mod/output_book_mod"
+    input_path         = "$baseDir/../mop_mod/output_mod"
     reference          = "$baseDir/../anno/yeast_rRNA_ref.fa.gz"
 
     comparison         = "$baseDir/comparison.tsv"
