--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -12,10 +12,10 @@ jobs:
       with:
         fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
     - name: Build and Commit
-      uses: toniher/pages@v2
+      uses: sphinx-notes/pages@v2
       with:
         requirements_path: "docs/requirements.txt"
-        target_dir: "docs"
+        target_path: "docs"
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
