--- a/conf/awsbatch.config
+++ b/conf/awsbatch.config
@@ -25,7 +25,13 @@ process {
 
 	withLabel: big_mem_cpus {
 		time = '6h'
-		cpus = 2
+		cpus = 3
+		memory = '2G'
+	}
+	
+	withLabel: big_time_cpus {
+		time = '24h'
+		cpus = 3
 		memory = '2G'
 	}
 
