--- a/nextflow.global.config
+++ b/nextflow.global.config
@@ -7,6 +7,9 @@ env {
 }
 
 profiles {
+    m1mac {
+      includeConfig 'conf/m1_apple.config'
+    }
     awsbatch {
       includeConfig 'conf/awsbatch.config'
     }
