--- a/mop_preprocess/config.yaml
+++ b/mop_preprocess/config.yaml
@@ -3,7 +3,7 @@ subtitle: ""
 intro_text: False
 
 report_header_info:
-    - Please cite: "Cozzuto L, Liu H, Pryszcz LP, Pulido TH, Delgado-Tejedor A, Ponomarenko J, Novoa EM. MasterOfPores: A Workflow for the Analysis of Oxford Nanopore Direct RNA Sequencing Datasets. Front Genet. 2020 Mar 17;11:211. doi: 10.3389/fgene.2020.00211"
+    - Please cite: "Cozzuto L, Delgado-Tejedor A, Hermoso Pulido T, Novoa EM, Ponomarenko J. Nanopore Direct RNA Sequencing Data Processing and Analysis Using MasterOfPores. Methods Mol Biol. 2023;2624:185-205. doi: 10.1007/978-1-0716-2962-8_13."
 
 custom_logo: 'logo_small.png'
 custom_logo_url: 'https://github.com/biocorecrg/MoP2'
