--- a/nextflow.global.config
+++ b/nextflow.global.config
@@ -6,6 +6,10 @@ env {
   PYTHONNOUSERSITE = 1
 }
 
+singularity {
+    runOptions = "--no-home"
+}
+
 profiles {
     m1mac {
       includeConfig 'conf/m1_apple.config'
